--- a/pub/examples.html
+++ b/pub/examples.html
@@ -3,9 +3,9 @@
  <head>
  	<meta charset="utf-8">
     <title>Examples</title>
-    <script defer type="text/javascript" src="../NavigationBarGenerator.js"></script>
+    <script defer type="text/javascript" src="NavigationBarGenerator.js"></script>
     <script defer type="text/javascript" src="examples.js"></script>
-    <link rel="stylesheet" type="text/css" href="../NavigationBarGenerator.css">
+    <link rel="stylesheet" type="text/css" href="NavigationBarGenerator.css">
  </head>
  <body>
 
