--- a/pub/documentation.html
+++ b/pub/documentation.html
@@ -14,6 +14,7 @@
       <h1>Navigation Bar Generator API Methods</h1>
       <br/>
       <h2>Getting Started</h2>
+      <h3>Include the following two lines inside the meta tag in your HTML file.</h3>
       <code><textarea rows="8" disabled id="textCode">
          &#10;
          <script defer type="text/javascript" src="path/to/NavigationBarGenerator.js"></script>&#10;
@@ -28,6 +29,7 @@
       <br/>
       
       <h2>Initialize an Empty Navigation Bar (Choose one from top, bottom, left, right)</h2>
+      <h3>Note: Each Navigation Bar Generator object should only have one bar.</h3>
       <code><textarea rows="12" disabled id="textCode">
          &#10;
          nb.makeTopBar();&#10;
