--- a/pub/index.html
+++ b/pub/index.html
@@ -7,7 +7,10 @@
     <script defer type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="libary/NavigationBarGenerator.css">
  </head>
- <body>
-    <h1>Navigation Bar Generator</h1>
+ <body >
+    <div style="margin-left: 15%; margin-top: 20%;">
+      <h1 style="font-size: 80px;">Navigation Bar Generator</h1>
+      <h1 style="font-size: 30px;">See the bottom navigation bar for more info.</h1>
+    </div>
  </body>
 </html>
